# ndlocr-lite

./: .gitignore  LICENCE_DEPENDENCEIES  環境構成ガイド.md
.claude/past-sub-agents-implementation-record/: 計画・状況・報告_サブエージェント_Sub-A_後処理ツール全面改修.md  計画・状況・報告_サブエージェント_Sub-B_フック流入文面更新.md  計画・状況・報告_サブエージェント_Sub-C_スラッシュコマンド調査.md  計画・状況・報告_サブエージェント_Sub-D_gitignore更新.md  計画・状況・報告_サブエージェント_Sub-E_ndlocr_buildコマンド作成.md  計画・状況・報告_サブエージェント_Sub-F_resume対応実装.md
ndlocr-lite-gui/: main.py  pyproject.toml  requirements.txt
postprocess/: README.md  build_merged_text.py  search_ocr.py
src/: deim.py  ocr.py  tcy_wrapper.py
src/reading_order/order/: parse_xml.py
src/tools/: ndlkoten2tei.py
